--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "continuous-average",
-  "version": "0.0.1",
-  "description":
-    "Calculate averages for large quantities or continuous data without having to store a huge array",
+  "version": "0.0.2",
+  "description": "Calculate averages for large quantities or continuous data without having to store a huge array",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
